==> ARMmbed/mbed-os/features/FEATURE_LWIP/lwip-interface/lwip-eth/arch/TARGET_Infineon/xmc4500_emac.c <==
#include "lwip/opt.h"
#include "lwip/sys.h"
#include "lwip/def.h"
#include "lwip/mem.h"
#include "lwip/pbuf.h"
#include "lwip/stats.h"
#include "lwip/snmp.h"
#include "lwip/tcpip.h"
#include "lwip/ethip6.h"
#include "lwip/igmp.h"
#include "lwip/mld6.h"
#include "netif/etharp.h"
#include "netif/ppp/pppoe.h"
#include "xmc_eth_mac.h"
#include "xmc_eth_phy.h"
#include "xmc_gpio.h"
#include "eth_arch.h"
#include "sys_arch.h"
#define RXD1     P2_3
#define RXD0     P2_2
#define RXER     P2_4
#define CLK_RMII P15_8
#define TX_EN    P2_5
#define TXD1     P2_9
#define TXD0     P2_8
#define CRS_DV   P15_9
#define MDIO     P2_0
#define MDC      P2_7
#define PHY_ADDR                0
#define STATE_UNKNOWN           (-1)
#define XMC_ETH_MAC_NUM_RX_BUF (4)
#define XMC_ETH_MAC_NUM_TX_BUF (4)
#define ETH_LWIP_PHY_MAX_RETRIES  0xfffffU
#define FLAG_TX  1
#define FLAG_RX  2
#define PHY_TASK_PERIOD_MS      200

static err_t low_level_init(struct netif *netif)
{
    uint32_t phyAddr = 0;
    bool link = false;
    XMC_ETH_LINK_SPEED_t speed;
    XMC_ETH_LINK_DUPLEX_t duplex;
    uint64_t mac_addr = 0;

    XMC_ETH_MAC_PORT_CTRL_t port_control;
    XMC_GPIO_CONFIG_t gpio_config;

    /* Do whatever else is needed to initialize interface. */
    gpio_config.mode = XMC_GPIO_MODE_INPUT_TRISTATE;
    XMC_GPIO_Init(RXD0, &gpio_config);
    XMC_GPIO_Init(RXD1, &gpio_config);
    XMC_GPIO_Init(CLK_RMII, &gpio_config);
    XMC_GPIO_Init(CRS_DV, &gpio_config);
    XMC_GPIO_Init(RXER, &gpio_config);
    XMC_GPIO_Init(MDIO, &gpio_config);

    port_control.mode = XMC_ETH_MAC_PORT_CTRL_MODE_RMII;
    port_control.rxd0 = XMC_ETH_MAC_PORT_CTRL_RXD0_P2_2;
    port_control.rxd1 = XMC_ETH_MAC_PORT_CTRL_RXD1_P2_3;
    port_control.clk_rmii = XMC_ETH_MAC_PORT_CTRL_CLK_RMII_P15_8;
    port_control.crs_dv = XMC_ETH_MAC_PORT_CTRL_CRS_DV_P15_9;
    port_control.rxer = XMC_ETH_MAC_PORT_CTRL_RXER_P2_4;
    port_control.mdio = XMC_ETH_MAC_PORT_CTRL_MDIO_P2_0;
    mac_addr = (((uint64_t)netif->hwaddr[0] << 0U) | ((uint64_t)netif->hwaddr[1] << 8U) | ((uint64_t)netif->hwaddr[2] << 16U) | ((uint64_t)netif->hwaddr[3] << 24U) | ((uint64_t)netif->hwaddr[4] << 32U) | ((uint64_t)netif->hwaddr[5] << 40U));
    eth_mac.address = mac_addr;
    XMC_ETH_MAC_SetPortControl(&eth_mac, port_control);

    XMC_ETH_MAC_Init(&eth_mac);

    XMC_ETH_MAC_DisableJumboFrame(&eth_mac);
    XMC_ETH_MAC_EnableReceptionBroadcastFrames(&eth_mac);

    gpio_config.output_level = XMC_GPIO_OUTPUT_LEVEL_LOW;
    gpio_config.output_strength = XMC_GPIO_OUTPUT_STRENGTH_STRONG_SHARP_EDGE;
    gpio_config.mode = (XMC_GPIO_MODE_t)((uint32_t)XMC_GPIO_MODE_OUTPUT_PUSH_PULL |P2_8_AF_ETH0_TXD0);
    XMC_GPIO_Init(TXD0, &gpio_config);

    gpio_config.mode = (XMC_GPIO_MODE_t)((uint32_t)XMC_GPIO_MODE_OUTPUT_PUSH_PULL | P2_9_AF_ETH0_TXD1);
    XMC_GPIO_Init(TXD1, &gpio_config);

    gpio_config.mode = (XMC_GPIO_MODE_t)((uint32_t)XMC_GPIO_MODE_OUTPUT_PUSH_PULL | P2_5_AF_ETH0_TX_EN);
    XMC_GPIO_Init(TX_EN, &gpio_config);

    gpio_config.mode = (XMC_GPIO_MODE_t)((uint32_t)XMC_GPIO_MODE_OUTPUT_PUSH_PULL | P2_7_AF_ETH0_MDC);
    XMC_GPIO_Init(MDC, &gpio_config);

    XMC_GPIO_SetHardwareControl(MDIO, XMC_GPIO_HWCTRL_PERIPHERAL1);

    /* Initialize PHY */
    PHY_Init(&eth_mac, 0, &eth_phy_config);
    PHY_GetLinkStatus(&eth_mac, phyAddr, &link);

    if(link){
        PHY_GetLinkSpeedDuplex(&eth_mac, phyAddr, &speed, &duplex);

        XMC_ETH_MAC_SetLink(&eth_mac, speed, duplex);
        /* Enable ethernet interrupts */
        XMC_ETH_MAC_EnableEvent(&eth_mac, (uint32_t)XMC_ETH_MAC_EVENT_RECEIVE);

        NVIC_SetPriority(ETH0_0_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 63U, 0U));
        NVIC_ClearPendingIRQ(ETH0_0_IRQn);
        NVIC_EnableIRQ(ETH0_0_IRQn);
        XMC_ETH_MAC_EnableTx(&eth_mac);
        XMC_ETH_MAC_EnableRx(&eth_mac);
    }else{
        /* Enable ethernet interrupts */
        XMC_ETH_MAC_DisableEvent(&eth_mac, (uint32_t)XMC_ETH_MAC_EVENT_RECEIVE);
        NVIC_DisableIRQ(ETH0_0_IRQn);

        XMC_ETH_MAC_DisableTx(&eth_mac);
        XMC_ETH_MAC_DisableRx(&eth_mac);
    }

    return ERR_OK;
}

static void emac_thread(void* pvParameters)
{
    xmc_enetdata_t *xmc_enet = pvParameters;

    for (;;) {
        uint32_t flags = osThreadFlagsWait(FLAG_RX|FLAG_TX, osFlagsWaitAny, PHY_TASK_PERIOD_MS);
        if (flags == osFlagsErrorTimeout) {
            // Rather than calling strictly every period, we call when idle
            // for that period - hopefully good enough. We run this task
            // from lwIP's thread rather than our RX/TX thread, as PHY reads can
            // be slow, and we don't want them to interfere with data pumping.
            // This is analogous to the way the PHY polling works in the Nanostack
            // version of the driver
            tcpip_callback_with_block(xmc_phy_task, &xmc_enet->netif, 0);
            continue;
        }

        LWIP_ASSERT("osThreadFlagsWait error", !(flags & osFlagsError));

        if (flags & FLAG_RX) {
            packet_rx(xmc_enet);
        }

        if (flags & FLAG_TX) {
            packet_tx(xmc_enet);
        }
    }
}

static void packet_rx(xmc_enetdata_t *xmc_enet)
{
    int idx = 0;

    xmc_enetif_input(xmc_enet->netif, idx);
}

static void packet_tx(xmc_enetdata_t *xmc_enet)
{
    // Not supported now
}

err_t eth_arch_enetif_init(struct netif *netif)
{
    err_t err;

    LWIP_ASSERT("netif != NULL", (netif != NULL));

    xmc_enetdata.netif = netif;

    /* set MAC hardware address */
#if (MBED_MAC_ADDRESS_SUM != MBED_MAC_ADDR_INTERFACE)
    netif->hwaddr[0] = MBED_MAC_ADDR_0;
    netif->hwaddr[1] = MBED_MAC_ADDR_1;
    netif->hwaddr[2] = MBED_MAC_ADDR_2;
    netif->hwaddr[3] = MBED_MAC_ADDR_3;
    netif->hwaddr[4] = MBED_MAC_ADDR_4;
    netif->hwaddr[5] = MBED_MAC_ADDR_5;
#else
    mbed_mac_address((char *)netif->hwaddr);
#endif

    /* Ethernet address length */
    netif->hwaddr_len = ETH_HWADDR_LEN;

    /* maximum transfer unit */
    netif->mtu = 1500;

    /* device capabilities */
    netif->flags = NETIF_FLAG_BROADCAST | NETIF_FLAG_ETHARP | NETIF_FLAG_ETHERNET;

    /* Initialize the hardware */
    netif->state = &xmc_enetdata;
    err = low_level_init(netif);
    if (err != ERR_OK)
        return err;

#if LWIP_NETIF_HOSTNAME
    /* Initialize interface hostname */
    netif->hostname = "xmc4500";
#endif /* LWIP_NETIF_HOSTNAME */

    netif->name[0] = 'e';
    netif->name[1] = 'n';

    netif->output = xmc_etharp_output_ipv4;

    netif->linkoutput = xmc_low_level_output;

    LWIP_ASSERT("xTXDCountSem creation error", (xmc_enetdata.xTXDCountSem.id != NULL));

    err = sys_mutex_new(&xmc_enetdata.TXLockMutex);
    LWIP_ASSERT("TXLockMutex creation error", (err == ERR_OK));

    /* Allow the PHY task to detect the initial link state and set up the proper flags */
    tcpip_callback_with_block(xmc_phy_task, netif, 1);
    osDelay(10);

    /* Worker thread */
    xmc_enetdata.thread = sys_thread_new("xmc_emac_thread", emac_thread, netif->state, DEFAULT_THREAD_STACKSIZE, osPriorityNormal)->id;

    /* Trigger thread to deal with any RX packets that arrived before thread was started */
    packet_rx(&xmc_enetdata);
    return ERR_OK;
}
